--- a/aoc/Cargo.toml
+++ b/aoc/Cargo.toml
@@ -3,6 +3,6 @@ authors = ["rob cobb <rwcobbjr@gmail.com>"]
 edition = "2018"
 name = "aoc"
 version = "0.1.0"
-
 [dependencies]
+anyhow = "*"
 structopt = "*"
